[project]
name = "parameter-golf"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12, <3.14"
dependencies = [
    "datasets>=4.8.4",
    "huggingface-hub>=1.8.0",
    "kernels>=0.12.3",
    "numpy>=2.4.3",
    "sentencepiece>=0.2.1",
    "setuptools>=82.0.1",
    "tiktoken>=0.12.0",
    "torch",
    "tqdm>=4.67.3",
    "typing-extensions==4.15.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
